# youbot-libs

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  autotune.cpp  package.xml  pose_node.py  position_control.py  start-all.sh
launch/: .vicon.launch.swp  base.launch  vicon.launch  youbot-position.launch
src/youbot-position/: CMakeLists.txt  PID_X.py  package.xml  pose_node.py  position_control.py
src/youbot_position/: package.xml  pose_node.py  position_control.py
src/youbot_position/launch/: base.launch  vrep.launch  youbot-position.launch
srv/: PositionControl.srv
