<package format="2">
  <name>youbot_position</name>
  <version>0.0.1</version>
  <description>
  This package provides PID control for the youBots.
  </description>
  <maintainer email="priyasrikumar1@gmail.com">Priya Srikumar</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_runtime</build_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
